# syngrafo

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.adoc
.github/workflows/: release.yml
app/: dms_bindings.hh  dms_handle.hh  dms_models.hh  dms_monadic.hh  image_decode.hh  image_decode_apple.mm  image_decode_generic.cc  keychain_mac.hh  main.cc  ocr_mac.mm  platform.hh
app/bindings/: archive_bindings.hh  audio_bindings.hh  bookmark_bindings.hh  file_bindings.hh  image_bindings.hh  lifecycle_bindings.hh  lm_bindings.hh  model_bindings.hh  netmon_bindings.hh  nlp_bindings.hh  palette_bindings.hh  pdf_bindings.hh  video_bindings.hh
app/bindings/impl/: bookmark_impl.hh  lifecycle_impl.hh  meta_impl.hh  ocr_impl.hh  scan_impl.hh  video_impl.hh  workflow_helpers.hh  zone_impl.hh
app/cli/: registry.hh  terminal.hh  types.hh
app/core/: document.hh  document_state.hh  gltf.hh  image.hh  image_ops.hh  lm_engine.hh  mesh.hh  palette.hh  pipeline.hh  zone.hh
app/db/: bind.hh  concepts.hh  database.hh  query.hh  readme.adoc  row.hh  value.hh  value_convert.hh
app/db/migration/: migration.hh  runner.hh  source.hh  source_fs.hh  source_static.hh
app/internal/: crypto.hh  discard.hh  encoding.hh  fs_utils.hh  hashing.hh  math.hh  mime.hh  schema.hh  text_utils.hh
app/media/: topology.hh
app/services/indexing/: index_service.hh
app/services/lifecycle/: document_lifecycle_service.hh
app/services/search/: search_service.hh
app/services/zone/: zone_storage_service.hh
cmake/: audio.cmake  bundle_apple.cmake  bundle_data_if_exists.cmake  compiler.cmake  cpack_config.cmake  fetch_deps.cmake  frontend.cmake  sqlite.cmake  summary.cmake  video.cmake
cmake/patches/: csound_opadr.cmake  extract_csound_pkg.cmake  llama_context_algorithm.cmake  llama_patches.cmake
data/: llm_catalog.json  stopwords_de.txt  stopwords_en.txt  stopwords_fr.txt
data/documents/book/: chapter.json
data/documents/freeform/: blank.json
data/documents/invitation/: event-invitation.json
data/documents/invoice/: invoice-items.csv  invoice.json
data/documents/letter/: personal-letter.json
data/documents/report/: quarterly-report.json
data/filters/: file_extensions.txt  repo_tokens.txt  web_tokens.txt
frontend/: package.json
scripts/: build_ocr_mac.sh  dev.py  download_fonts.py  download_models.py  gen_icon.py
